--- a/style.css
+++ b/style.css
@@ -1,8 +1,109 @@
-.curvo{
-    border-radius: 30px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 16px;
-    height: 48px;
-    padding-left: 16px;
-    padding-right: 16px;
+html{
+    min-height: 100%;
 }
+
+body{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+}
+.contenedor{
+    padding:  16px 16px ;
+   row-gap: 20px;
+   height: 80px;
+   display: grid;
+   grid-template-columns: 48px 73.31px 62.65px auto 48px 48px 48px 24px;
+   grid-template-rows: 48px ;
+   grid-template-areas: 
+   'logo inicio hoy buscador campana mensaje  imagen flecha '  ;
+   background-color: white;
+}
+
+.general{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.logo{
+    grid-area: logo;
+}
+.inicio{
+    grid-area: inicio;
+    font-size: 16px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: black;
+    border-radius: 24px;
+    color: rgb(255, 255, 255);
+}
+
+.inicio_2{
+    font-size: 16px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    font-weight:bold;
+}
+.hoy_2{
+    font-size: 16px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: black;
+    border-radius: 24px;
+    color: rgb(255, 255, 255);
+}
+.hoy{
+    grid-area: hoy;
+    font-size: 16px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+   text-decoration-line: none ;
+   font-weight:bold;
+}
+a:hover {
+    color:#100;
+  }
+
+.buscador{
+    display: flex;
+    text-align: start;
+    align-items: center;
+    border-color: transparent;
+    grid-area: buscador;
+    border-radius: 24px;
+    width: 100%;
+    background-color: rgb(239 ,239, 239);
+    color: rgb(0, 0, 0);
+}
+
+.campana{
+    grid-area: campana;
+    background-color:transparent;
+}
+.lupa{
+    display: flex;
+    justify-content:flex-end;
+    align-items: center;
+    background-color:transparent;
+    width: 48px;
+    height: 48px;
+}
+
+.mensaje{
+    grid-area: mensaje;
+    background-color:transparent;
+}
+
+.imagen{
+    grid-area: imagen;
+    border-radius: 50%;
+}
+
+.flecha{
+    grid-area: flecha;
+}
+
+h1{
+    width: auto;
+}
+
