--- a/style.css
+++ b/style.css
@@ -5,8 +5,35 @@ html{
 body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
+
 }
-.contenedor{
+@media screen and (min-width: 601px){
+
+     div.lupa_2{
+        
+        display: none;
+    }
+   
+    
+}
+@media only screen and (max-width: 600px) {
+    div.buscador {
+    display: flex;
+    justify-content: flex-end;
+    background-color: transparent;
+    width: 100%;
+        
+    }
+
+    div.lupa{
+        display: flex;
+        justify-content:center;
+        align-items: center;
+        display: none;
+    }
+
+}
+  .contenedor{
     padding:  16px 16px ;
    row-gap: 20px;
    height: 80px;
@@ -14,7 +41,7 @@ body{
    grid-template-columns: 48px 73.31px 62.65px auto 48px 48px 48px 24px;
    grid-template-rows: 48px ;
    grid-template-areas: 
-   'logo inicio hoy buscador campana mensaje  imagen flecha '  ;
+   'logo inicio hoy contenedor_buscador campana mensaje  imagen flecha '  ;
    background-color: white;
 }
 
@@ -44,6 +71,8 @@ body{
     text-decoration: none;
     font-weight:bold;
 }
+
+
 .hoy_2{
     font-size: 16px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -52,6 +81,7 @@ body{
     color: rgb(255, 255, 255);
 }
 .hoy{
+    
     grid-area: hoy;
     font-size: 16px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -63,22 +93,35 @@ body{
 a:hover {
     color:#100;
   }
-
-.buscador{
+.contenedor_buscador{
+    grid-area: contenedor_buscador;
     display: flex;
     text-align: start;
     align-items: center;
     border-color: transparent;
-    grid-area: buscador;
-    border-radius: 24px;
+    box-sizing: border-box;
+    padding-left: 8px;
+    padding-right: 8px;
     width: 100%;
+   
+}
+.buscador{
+    width: 100%;
+    display: flex;
+    text-align: start;
+    align-items: center;
+    border-color: transparent;
+    box-sizing: border-box;
+    border-radius: 24px;
     background-color: rgb(239 ,239, 239);
     color: rgb(0, 0, 0);
+    
 }
 
 .campana{
     grid-area: campana;
     background-color:transparent;
+    
 }
 .lupa{
     display: flex;
