--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html{
 body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
-
+   
 }
 @media screen and (min-width: 901px){
 
@@ -23,7 +23,7 @@ body{
     justify-content: flex-end;
     background-color: transparent;
     width: 100%;
-        
+
     }
     div.letra{
         display: none;
@@ -36,6 +36,13 @@ body{
         display: none;
     }
 
+}
+
+nav{
+    overflow: hidden;
+    position: sticky;
+    top: 0;
+    width: 100%;
 }
   .contenedor{
     display: grid;
@@ -57,6 +64,9 @@ body{
 
 .logo{
     grid-area: logo;
+    color:  #c00;
+     fill: currentColor;
+    
 }
 .inicio{
     grid-area: inicio;
@@ -84,19 +94,24 @@ body{
     border-radius: 24px;
     color: rgb(255, 255, 255);
 }
+
+.sombreado:hover{
+   background-color: rgb(239 ,239, 239);
+    border-radius: 50%;
+    
+}
 .hoy{
-     
+
     grid-area: hoy;
     font-size: 16px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: rgb(255, 255, 255);
+    text-decoration: none;
     color: rgb(0, 0, 0);
-   text-decoration-line: none ;
+    text-decoration: none;
    font-weight:bold;
 }
 .diseño_imagen:hover {
-   filter:grayscale(2);
-  }
+  border: 5px solid rgb(115, 255, 187);
+  }        
 .contenedor_buscador{
     grid-area: contenedor_buscador;
     display: flex;
@@ -127,21 +142,29 @@ body{
 }
 .campana{
     grid-area: campana;
-    background-color:transparent;
+     color:  #767676;
+     fill: currentColor;
+    
     
 }
+
+
 .lupa{
-    display: flex;
-    justify-content:flex-end;
-    align-items: center;
-    background-color:transparent;
-    width: 48px;
     height: 48px;
+    padding-left: 16px;
+    align-items: center;
+    color:  #767676;
+    fill: currentColor;
+ 
 }
 
 .mensaje{
     grid-area: mensaje;
     background-color:transparent;
+    color:  #767676;
+    fill: currentColor;
+    
+    
 }
 
 .imagen{
@@ -151,6 +174,13 @@ body{
 
 .flecha{
     grid-area: flecha;
+    color:  #767676;
+    fill: currentColor;
+    
+}
+.flecha_dim{
+width: 24px;
+height: 24px;
 }
 
 .contenedor_imagenes {
@@ -165,9 +195,9 @@ body{
 }
 
 .diseño_imagen{
-    margin: 16px 8px;
+    margin: 2px 8px;
     border-radius: 16px;
-    background-color: rgb(112, 74, 165);
+
 }
 
 .imagen_pequeña_1{
@@ -257,7 +287,7 @@ background-size: cover;
 
 .imagen_mediana_6 {
 grid-row-end: span  33;
-background: url( https://i.pinimg.com/236x/58/37/dd/5837ddfe8e758d17265200bdf38a6b37.jpg);
+background: url( https://i.pinimg.com/236x/48/a2/20/48a2209f21ca14c416d02697ceaa49b1.jpg);
 background-position: center;
 background-size: cover;
 
