--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ nav{
     color: rgb(0, 0, 0);
     text-decoration: none;
     font-weight:bold;
+  
 }
 
 
@@ -95,20 +96,21 @@ nav{
     color: rgb(255, 255, 255);
 }
 
-.sombreado:hover{
-   background-color: rgb(239 ,239, 239);
-    border-radius: 50%;
-    
-}
+
 .hoy{
 
     grid-area: hoy;
     font-size: 16px;
     text-decoration: none;
     color: rgb(0, 0, 0);
-    text-decoration: none;
    font-weight:bold;
 }
+.sombreado:hover{
+    background-color: rgb(239 ,239, 239);
+     border-radius: 50%;
+     
+ }
+
 .diseño_imagen:hover {
   border: 5px solid rgb(115, 255, 187);
   }        
@@ -147,7 +149,13 @@ nav{
     
     
 }
-
+.lupa_2{
+   
+    align-items: center;
+    color:  #767676;
+    fill: currentColor;
+ 
+}
 
 .lupa{
     height: 48px;
