--- a/style.css
+++ b/style.css
@@ -1,357 +1,20 @@
-html{
-    min-height: 100%;
-}
-
-body{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0;
-   
-}
-@media screen and (min-width: 901px){
-
-     div.lupa_2{
-
-        display: none;
-    }
-
-
-}
-@media only screen and (max-width: 900px) {
-    div.buscador {
-        
-    display: flex;
-    justify-content: flex-end;
-    background-color: transparent;
-    width: auto;
-    }
-    div.letra{
-        display: none;
-    }
-
-    div.lupa{
-
-        display: none;
-    }
-    div.contenedor_buscador{
-        display: flex;
-        justify-content:flex-end;
-        align-items:center;
-    }
-   nav.contenedor{
-        display: grid;
-        grid-template-columns: 48px 48px  auto 48px 48px 48px 24px;
-        grid-template-areas: 
-        'logo  hoy contenedor_buscador campana mensaje  imagen flecha '  ;
-       
-    }
-
-}
-.general{
-    display: flex;
-    justify-content: center;
-    align-items: center;
- }
- 
-nav{
-    overflow: hidden;
-    position:sticky;
-    top: 0;
-    width: 100%;
-}
-  .contenedor{
+.grid-container{
     display: grid;
-    padding:  16px 16px ;
-    row-gap: 20px;
-    height: 80px;
-    grid-template-columns: 48px 73.31px 62.65px auto 48px 48px 48px 24px;
-    grid-template-rows: 48px ;
-    grid-template-areas: 
-    'logo inicio hoy contenedor_buscador campana mensaje  imagen flecha '  ;
-    background-color: white;
-}
-.sombreado:hover{
-    background-color: rgb(239 ,239, 239);
-     border-radius: 50%;
-     
- }
-
-
-.logo{
-    grid-area: logo;
-    color:  #c00;
-     fill: currentColor;
-    
-}
-.inicio{
-    grid-area: inicio;
-    font-size: 16px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: black;
-    border-radius: 24px;
-    color: rgb(255, 255, 255);
-}
-
-.inicio_2{
-    font-size: 16px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    font-weight:bold;
-  
-}
-.hoy{
-
-    grid-area: hoy;
-    font-size: 16px;
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-   font-weight:bold;
-}
-
-.hoy_2{
-    font-size: 16px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: black;
-    border-radius: 24px;
-    color: rgb(255, 255, 255);
-}
-
- 
-.contenedor_buscador{
-    grid-area: contenedor_buscador;
-    display: flex;
-    text-align: start;
-    align-items: center;
-    border-color: transparent;
-    box-sizing: border-box;
-    padding-left: 8px;
-    padding-right: 8px;
-    width: 100%;
-   
-}
-.buscador{
-    width: 100%;
-    display: flex;
-    text-align: start;
-    align-items: center;
-    border-color: transparent;
-    box-sizing: border-box;
-    border-radius: 24px;
-    background-color: rgb(239 ,239, 239);
-    color: rgb(0, 0, 0);
-    
-}
-.letra{
-    color: rgb(113, 113, 113);
-    margin: 8px;
-}
-.lupa{
-    height: 48px;
-    padding-left: 16px;
-    align-items: center;
-    color:  #767676;
-    fill: currentColor;
- 
-}
-.lupa_2{
-   
-    align-items: center;
-    color:  #767676;
-    fill: currentColor;
- 
-}
-
-.campana{
-    grid-area: campana;
-     color:  #767676;
-     fill: currentColor;
-    
-    
-}
-
-.mensaje{
-    grid-area: mensaje;
-    background-color:transparent;
-    color:  #767676;
-    fill: currentColor;
-    
-    
-}
-
-.imagen{
-    grid-area: imagen;
-    border-radius: 50%;
-}
-
-.flecha{
-    grid-area: flecha;
-    color:  #767676;
-    fill: currentColor;
-    
-}
-.flecha_dim{
-width: 24px;
-height: 24px;
-}
-
-.contenedor_imagenes {
-    display: grid;
-    margin: 0;
-    padding: 0;
-    grid-template-columns: repeat(auto-fill, 236px);
-    grid-auto-rows: 10px;
+    grid-template-columns: repeat(auto-fill, 230px);
+    gap: 20px;
     justify-content: center;
-    background-color: rgb(255, 255, 255);
-    
+    margin: auto;
 }
 
-.diseño_imagen{
-    margin: 2px 8px;
-    border-radius: 16px;
-
-}
-
-.diseño_imagen:hover {
-    border: 5px solid rgb(115, 255, 187);
-    }    
-
-.imagen_pequeña_1{
-    grid-row-end: span 26;
-    background-image: url(https://i.pinimg.com/236x/48/99/7d/48997d29505fda6b407a0167c7cf63a3.jpg);
-   background-position: center;
-   background-size: cover;
+.grid-item{
+    width: 230px;
+    margin-bottom: 40px;
+    border-radius: 15px;
+    cursor: zoom-in;
+    background-color: lightgray;
 
 }
 
-.imagen_pequeña_2{
-  grid-row-end: span 26;
-  background: url(https://i.pinimg.com/236x/47/f7/dd/47f7dd0a94e3bec5edad0ea4370a7807.jpg);
- background-position: center;
- background-size: cover;
-
+.grid-item:hover{
+    filter: opacity(0.9);
 }
-
-.imagen_pequeña_3{
-  grid-row-end: span 26;
-  background-image: url(https://i.pinimg.com/236x/6b/9a/91/6b9a91adda559cb1d284d8fdddd07b67.jpg);
- background-position: center;
- background-size: cover;
-
-}
-.imagen_pequeña_4{
-  grid-row-end: span 26;
-  background: url(https://i.pinimg.com/236x/88/2a/cd/882acdf8cad9931b722f18156365c9d3.jpg);
- background-position: center;
- background-size: cover;
-
-}
-
-.imagen_pequeña_5{
-grid-row-end: span 26;
-background: url(https://i.pinimg.com/236x/c0/1d/a5/c01da5598b9eacad6940f13642b31962.jpg);
-background-position: center;
-background-size: cover;
-
-}
-
-.imagen_pequeña_6{
-grid-row-end: span 26;
-background: url(https://i.pinimg.com/236x/68/f5/5e/68f55e3d4671baa78fe2cd4bb38daa42.jpg);
-background-position: center;
-background-size: cover;
-
-}
-
-.imagen_mediana_1 {
-    grid-row-end: span  33;
-    background: url(https://i.pinimg.com/236x/59/b3/61/59b361a68343fb447ac89614f11edceb.jpg);
-    background-position: center;
-    background-size: cover;
-
-}
-.imagen_mediana_2 {
-  grid-row-end: span  33;
-  background: url(https://i.pinimg.com/236x/07/dc/3b/07dc3ba7ceb1015ddb6ed70a714bb94c.jpg);
-  background-position: center;
-  background-size: cover;
-
-}
-
-.imagen_mediana_3 {
-  grid-row-end: span  33;
-  background:  url(https://i.pinimg.com/236x/5a/52/6b/5a526b063c1c9dfb1d2b49e31dfc38ca.jpg);
-  background-position: center;
-  background-size: cover;
-
-}
-
-.imagen_mediana_4 {
-  grid-row-end: span  33;
-  background: url(https://i.pinimg.com/236x/95/07/88/95078832e7cc0e123eceb2db08b96a09.jpg);
-  background-position: center;
-  background-size: cover;
-
-}
-.imagen_mediana_5 {
-grid-row-end: span  33;
-background: url(https://i.pinimg.com/236x/90/a9/1e/90a91efcace57bf85fdad9a7a9925374.jpg);
-background-position: center;
-background-size: cover;
-
-}
-
-.imagen_mediana_6 {
-grid-row-end: span  33;
-background: url( https://i.pinimg.com/236x/48/a2/20/48a2209f21ca14c416d02697ceaa49b1.jpg);
-background-position: center;
-background-size: cover;
-
-}
-
-
-.imagen_grande_1{
-grid-row-end: span 45;
-background: url(https://i.pinimg.com/236x/b4/ae/21/b4ae215b133942bb5be598d2ff53de79.jpg);
-background-position: center;
-background-size: cover;
- 
-}
-
-.imagen_grande_2{
-grid-row-end: span 45;
-background: url(https://i.pinimg.com/236x/26/7f/70/267f708abe63e73643a8a6df60fa9e82.jpg);
-background-position: center;
-background-size: cover;
-}
-
-.imagen_grande_3{
-grid-row-end: span 45;
-background: url(https://i.pinimg.com/236x/32/89/d6/3289d66aa73e11501081bcd78e845036.jpg);
- background-position: center;
-background-size: cover;
-}
-
-.imagen_grande_4{
-grid-row-end: span 45;
-background: url(https://i.pinimg.com/236x/9e/d5/26/9ed5265b95ad3c2fc07bf378c97690f6.jpg);
-background-position: center;
-background-size: cover;
-}
-
-.imagen_grande_5{
-grid-row-end: span 45;
-background: url(https://i.pinimg.com/236x/7e/c3/33/7ec3330b85055115fe0dd8738be1d509.jpg);
-background-position: center;
-background-size: cover;
-}
-
-.imagen_grande_6{
-grid-row-end: span 45;
-background: url(https://i.pinimg.com/236x/15/b3/c4/15b3c4ac15e4b6a0fdf68ed8d8602e65.jpg);
-background-position: center;
-background-size: cover;
-}
-
-
-
