--- a/style.css
+++ b/style.css
@@ -18,3 +18,56 @@
 .grid-item:hover{
     filter: opacity(0.9);
 }
+
+.date {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    justify-content: center;
+}
+
+.title {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    justify-content: center;
+}
+
+.grid_container {
+    display: grid;
+    grid-template-columns: 424px 322px;
+    gap: 40px;
+    padding: 10px;
+    place-content: center center;
+}
+
+.grid_item1 {
+    width: 424px;
+    height: 322px;
+    display: flex;
+    padding: 10px;
+}
+
+.grid_item4 {
+    border-radius: 25px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 408px;
+    height: 306px;
+    display: flex;
+    padding: 10px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 50px;
+    color: white;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+.pie {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+}
